# hmi_measure_mysql

./: .gitignore  CMakeLists.txt  CodeExp&Func.md
apps/hmi_qt/: CMakeLists.txt  CodeExp&Func（CMakeLists）.md  CodeExp&Func（main）.md  alarm_widget.cpp  alarm_widget.hpp  alarm_widget.ui  calibration_widget.cpp  calibration_widget.hpp  calibration_widget_logic.cpp  calibration_widget_logic.hpp  data_widget.cpp  data_widget.hpp  data_widget.ui  dev_tools.cpp  dev_tools.hpp  dev_tools_widget.cpp  dev_tools_widget.hpp  dev_tools_widget.ui  diagnostics_widget.cpp  diagnostics_widget.hpp  diagnostics_widget.ui  login_dialog.cpp  login_dialog.hpp  main.cpp  main_v1.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  manual_maintain_logic.cpp  manual_maintain_logic.hpp  manual_maintain_widget.cpp  manual_maintain_widget.hpp  manual_maintain_widget.ui  mes_sys_client.cpp  mes_sys_client.hpp  mes_upload_widget.cpp  mes_upload_widget.hpp  mes_upload_widget.ui  mes_worker.cpp  mes_worker.hpp  (+16 more)
configs/: CodeExp&Func.md  app.ini  mes_id_mock.json
data/raw/: 398979da-b219-4eb5-8d01-da6b70924959.rawbin  48e49802-9b37-4268-928b-b8a6b651f8e2.rawbin  64dd75a2-663a-4525-9778-4fbf8a88b072.rawbin  74e234f0-4e28-4288-9d68-be4989b34222.rawbin  b15fe8c3-7ccd-49e1-b4bf-49ec77ea6d1f.rawbin  b91f06b2-0d22-4003-b322-bb3749c4adc3.rawbin  bce982cf-eb01-473b-8ca5-eb00d9a73c17.rawbin  d20654ed-fb26-4cf9-a584-3232d98dc026.rawbin  e0e4bdac-9bf5-438c-bee7-d2472cfe26b4.rawbin
data/raw/production/2026-04-29/: 27badc20-970b-4ca8-8afa-072458bd8554.rawbin  2995b8fa-8bf9-45e6-960d-077cfa76cc77.rawbin  4d26b662-01b7-4bd4-9146-1ebda8901884.rawbin  652f3ef5-637a-4433-98b0-6ce896e55e51.rawbin  9a6fa597-0213-41d5-a9a3-b12f2111f3d6.rawbin  c6989846-1dbb-4f24-b86a-f820d0449e66.rawbin  e6582cee-a417-4e16-baa4-18d27482b02c.rawbin  f81eb172-26b2-4409-8698-0f9a438744a4.rawbin
libs/core/: CMakeLists.txt  CodeExp&Func（CMakeLists）.md
libs/core/include/core/: CodeExp&Func（config）.md  CodeExp&Func（db）.md  CodeExp&Func（model）.md  CodeExp&Func（raw_v2）.md.md  config.hpp  db.hpp  domain_types.hpp  measurement_compute_service.hpp  measurement_geometry_algorithms.hpp  measurement_ingest.hpp  measurement_pipeline.hpp  mes_payload.hpp  model.hpp  plc_addresses_v26.hpp  plc_codec_v26.hpp  plc_contract_v2.hpp  plc_fake_client_v2.hpp  plc_motion_service_v26.hpp  plc_polling_v2.hpp  plc_polling_v26.hpp  plc_qt_modbus_v2.hpp  plc_repository_v26.hpp  plc_runtime_v2.hpp  plc_service_v26.hpp  plc_transport_v2.hpp  plc_types_v26.hpp  raw_v2.hpp  raw_writer.hpp  snapshot.hpp
libs/core/src/: CodeExp&Func（Config）.md  CodeExp&Func（db）.md  CodeExp&Func（model）.md  config.cpp  db.cpp  db_connection.cpp  db_legacy.cpp  db_measurement.cpp  db_mes.cpp  db_migration.cpp  measurement_compute_service.cpp  measurement_geometry_algorithms.cpp  measurement_ingest.cpp  measurement_pipeline.cpp  mes_payload.cpp  model.cpp  plc_codec_v26.cpp  plc_fake_client_v2.cpp  plc_motion_service_v26.cpp  plc_polling_v2.cpp  plc_qt_modbus_v2.cpp  plc_repository_v26.cpp  plc_runtime_v2.cpp  plc_service_v26.cpp  plc_transport_v2.cpp  raw_v2.cpp  raw_writer.cpp
